# artistic_work

./: README.md
Checking_tool_of_pouring_machine/: CMakeLists.txt  CMakeLists_bak.txt  HellQt_Clion.h  HellQt_Clion.h.in  Ui_mainwindow.h  calibrationparameters.cc  calibrationparameters.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  test.cc  universal_toolbox.hpp  utils.hpp  软件说明书.md
Checking_tool_of_pouring_machine/include/json/: reader.h  value.h
Checking_tool_of_pouring_machine/res/: Injection_machine_meter.json
ShareMemAPI/: ShareMemAPI.vcxproj  ShareMemAPI.vcxproj.filters  cpython_api_win32.cpp  cpython_api_win32.h
TLX/: TLX.sln
TLX/DBHelper/: DBHelper.h  DBHelper.hpp  DBHelper.vcxproj  DBHelper.vcxproj.filters  IDBHelper.h  main.cpp  stdafx.h
TLX/DBHelper/Debug/: DBHelper.exe.recipe  DBHelper.ilk  vc142.idb
TLX/DBHelper/Debug/DBHelper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TLX/MWGUI/: MWGUI.vcxproj  MWGUI.vcxproj.filters  main.cpp  main_window.cpp  main_window.h  main_window.ui
TLX/MWGUI/x64/Debug/: MWGUI.exe.recipe
TLX/MWGUI/x64/Debug/MWGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MWGUI.lastbuildstate  MWGUI.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
TLX/MWGUI/x64/Debug/moc/: moc_main_window.cpp
TLX/MWGUI/x64/Debug/qmake/temp/: .qmake.stash  qtvars.vcxproj  qtvars_x64_Debug.props
TLX/MWGUI/x64/Debug/uic/: ui_main_window.h
TLX/MiddleWare/: MiddleWare.vcxproj
TLX/MiddleWare/Debug/: MiddleWare.exe.recipe
TLX/shareMem/: access_mem.cpp  file_struct.h  interprocess_share_mem.cpp  interprocess_share_mem.h  main.cpp  mem_struct.h  shareMem.vcxproj  shareMem.vcxproj.filters
TLX/shareMem/Debug/: shareMem.exe.recipe  shareMem.ilk  vc142.idb
TLX/shareMem/Debug/shareMem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  shareMem.lastbuildstate
TLX/x64/Debug/: MWGUI.ilk
inspiration/: CMakeLists.txt  circle.py  main.cpp
inspiration/accessor/: file_accessor.hpp
inspiration/asio/: asyn_asio.cc
inspiration/boost_interprocess/: file_mapped.hpp  mapped_file.h  messages_queue.cc  messages_queue.h  testShareMemory.cc  test_main.cc
inspiration/correspondence/: chat_client.cc  chat_message.hpp  chat_server.cc  communication.h  readme.md  synasio.cc  synasio.h
inspiration/loger/: glog_test.cc  gloger.cc  gloger.h  log_config.json  log_error_2022_03_15  log_info_2022_03_15  log_info_2022_03_16  log_warning_2022_03_15  log_warning_2022_03_16
inspiration/reflection/: Reflector.hpp  testMain.cc  test_flection.hpp
inspiration/shareMemory/: testShareMemory.cc
inspiration/test/: occi.cc
inspiration/tools/: utils.hpp
inspiration/ui/: Ui_network_socket.h  network_socket.cc  network_socket.h  network_socket.ui
learn_vue/: index.html  package-lock.json  package.json
middleware/: CMakeLists.txt  main.cpp
